force-app/main/default/objects/Study_Protocol__c/Study_Protocol__c.object-meta.xml
<CustomObject>
    <label>Study Protocol</label>
    <nameField>
        <displayFormat>SP-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Study Protocol</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>