force-app/main/default/objects/Study_Protocol__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Study Protocol</relationshipLabel>
    <relationshipName>Study_Protocol</relationshipName>
    <type>Lookup</type>
</CustomField>