force-app/main/default/objects/Study_Protocol__c/fields/Clinical_Site__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clinical Site</label>
    <type>Checkbox</type>
</CustomField>