force-app/main/default/objects/Study_Protocol__c/fields/Disease__c.field-meta.xml
<CustomField>
    <fullName>Disease__c</fullName>
    <label>Disease</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Disease</valueSetName>
    </valueSet>
</CustomField>