force-app/main/default/objects/Study_Protocol__c/fields/Indications__c.field-meta.xml
<CustomField>
    <fullName>Indications__c</fullName>
    <label>Indications</label>
    <type>TextArea</type>
</CustomField>