force-app/main/default/objects/Study_Protocol__c/fields/Protocol_Number__c.field-meta.xml
<CustomField>
    <fullName>Protocol_Number__c</fullName>
    <label>Protocol Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>