force-app/main/default/objects/Study_Protocol__c/fields/Reason_of_signature__c.field-meta.xml
<CustomField>
    <fullName>Reason_of_signature__c</fullName>
    <label>Reason of signature</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>