force-app/main/default/objects/Study_Protocol__c/fields/Study_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Study_Protocol__c</fullName>
    <label>Study Protocol</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>