force-app/main/default/objects/Study_Protocol__c/fields/Study_Protocol_Description__c.field-meta.xml
<CustomField>
    <fullName>Study_Protocol_Description__c</fullName>
    <label>Study Protocol Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>