force-app/main/default/objects/Study_Protocol__c/fields/Study_Protocol_Name__c.field-meta.xml
<CustomField>
    <fullName>Study_Protocol_Name__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;+Id,  Display_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Study Protocol Name</label>
    <type>Text</type>
</CustomField>