force-app/main/default/objects/Study_Protocol__c/fields/Study_Template__c.field-meta.xml
<CustomField>
    <fullName>Study_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Template</label>
    <referenceTo>Study_Template__c</referenceTo>
    <relationshipLabel>Study Protocol</relationshipLabel>
    <relationshipName>Study_Protocol</relationshipName>
    <type>Lookup</type>
</CustomField>