force-app/main/default/objects/Study_Protocol__c/fields/Study_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Study_Template_Name__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;+ Study_Template__r.Id ,  Study_Template__r.Study_template_Name__c ,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Study Template Name</label>
    <type>Text</type>
</CustomField>