force-app/main/default/objects/Study_Protocol__c/fields/Therapy__c.field-meta.xml
<CustomField>
    <fullName>Therapy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Therapy</label>
    <referenceTo>Therapy__c</referenceTo>
    <relationshipName>Study_Definition</relationshipName>
    <type>Lookup</type>
</CustomField>