force-app/main/default/objects/Study_Protocol__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Study_Protocol_Name__c</columns>
    <columns>Display_Name__c</columns>
    <columns>Study_Template_Name__c</columns>
    <columns>Disease__c</columns>
    <columns>Protocol_Number__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>